Update NavalBattle.java